# 2drenderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.h  image.c  image.h  main.c  renderer  renderer.c  renderer.h  renderer.sh  sprite.c  sprite.h
2drenderer/: CMakeLists.txt
2drenderer/src/: animated_sprite.c  animated_sprite.h  image.c  image.h  position.h  renderer.c  renderer.h  size_2d.h  sprite.c  sprite.h
2drenderer/src/algorithms/: nearest_neighbour.c  nearest_neighbour.h
assets/: car.aseprite  cat-walk.aseprite
engine/: CMakeLists.txt
engine/src/: dynamic_array.c  dynamic_array.h  game_object.c  game_object.h  geometry.c  geometry.h  physics.h
engine/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dynamic_array_test  dynamic_array_test.c
game/: CMakeLists.txt
game/src/: dot.c  dot.h  dynamic_entity.c  dynamic_entity.h
math/: CMakeLists.txt
math/src/: geometry.c  geometry.h
